--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', microposts_path %>
+<%= link_to 'Micropost List', microposts_path %>
+<%= link_to 'Users List', users_path %>
+<%= link_to 'New User', new_user_path %>
