--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -27,3 +27,6 @@
 <br>
 
 <%= link_to 'New User', new_user_path %>
+<%= link_to 'Micropost List', microposts_path %>
+<%= link_to 'New Micropost', new_micropost_path %>
+
