--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+<%= link_to 'Users List', users_path %>
+<%= link_to 'Micropost List', microposts_path %>
+<%= link_to 'New Micropost', new_micropost_path %>
